--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "name": "slide-experiment",
+  "name": "ood_uab",
   "version": "1.0.0",
   "description": "it is based on Reveal.js presentation",
   "dependencies": {
